<resources>
    <string name="app_name">listMovies</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_movie_detail">MovieDetailActivity</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">Search student</string>
    <string name="action_search">Buscar Película</string>
    <string name="sinopsis">Sinopsis</string>
    <string name="titulo_original">Título Original</string>
    <string name="release">Fecha de estreno</string>
    <string name="sitio">Sitio Web</string>
    <string name="languaje">Idioma</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="trailer">Ver Trailer</string>
    <string name="name">Nombre:</string>
    <string name="type">Tipo:</string>
    <string name="link">Página:</string>
    <string name="site">Proveedor:</string>
</resources>
