<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/start"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:scaleType="centerCrop"
            android:layout_marginTop="10dp"
            android:src="@drawable/start" />

        <TextView
            android:id="@+id/txt_score"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txt_vote_count"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/sinopsis"
            android:textColor="?colorPrimary" />

        <TextView
            android:id="@+id/txt_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="fill"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:orientation="vertical">


        <Button
            android:id="@+id/view_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/trailer"
            android:visibility="visible" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/release"
        android:textColor="?colorPrimary" />

    <TextView
        android:id="@+id/txt_release"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        tools:text="300 20 1111" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/titulo_original"
        android:textColor="?colorPrimary" />

    <TextView
        android:id="@+id/txt_title_original"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        tools:text="Abogado penalista" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/languaje"
        android:textColor="?colorPrimary" />

    <TextView
        android:id="@+id/txt_languaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/sitio"
        android:textColor="?colorPrimary" />

    <TextView
        android:id="@+id/txt_web"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="all"
        android:clickable="true"
        android:textColorLink="@color/colorPrimary"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        />

</LinearLayout>